--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="all">
-        <div class="logo">
-            <p>logo</p>
+    <div class="main">
+        <div class="link">
+
         </div> 
 
-        <div class="main">
-                <div class="box">
-
-                </div> 
+        <div class="r2015">
+                
         </div> 
     </div>
     
