--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script>
         function click(a){
             var lis = document.getElementsByClassName("item");
+            var li = document.getElementById("item "+String(a));
         }
     
     </script>
