--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         function click(a){
             var lis = document.getElementsByClassName("item");
             var li = document.getElementById("item "+String(a));
+            li.className = li.className + "active";
         }
     
     </script>
