--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 2015
             </div> 
             <div class="txt">
-                something
+                something not intresting
 
             </div>
 
